<resources>
    <string name="app_name">Torre.co Challenge App</string>

    <string name="default_content_description">default_content_description</string>

    <string name="jobs">Jobs</string>
    <string name="bios">Bios</string>

    <string name="filter">Write your filter here</string>

    <!--    Card Example-->
    <string name="Card_name">Android</string>
    <string name="Card_highligth">2000000 – 6000000 COP$ Monthly</string>
    <string name="Card_time">Partial Time</string>
    <string name="Card_remote">Remote</string>
    <string name="Card_skill">Skill</string>

    <!--    Menú-->
    <string name="item_about">About</string>

    <!--    Author-->
    <string name="author_name_1" translatable="false">Julio César Alberto</string>
    <string name="author_name_2" translatable="false">León Anhuamán</string>
    <string name="author_profession" translatable="false">Android Developer - UI/UX Designer</string>
    <string name="author_email" translatable="false">julioleon2004@gmail.com</string>
    <string name="author_phone" translatable="false">+58 (424) 225.92.20</string>

    <!--    Job View-->
    <string name="job_subtitle_1">Skills Needed</string>
    <string name="job_subtitle_2">Location</string>
    <string name="job_subtitle_3">Description</string>
    <string name="job_subtitle_4">Details</string>
    <string name="job_subtitle_5">Languages</string>
    <string name="job_subtitle_6">Hiring Organization</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis facilisis, ultrices ad diam torquent scelerisque a lacinia suspendisse nec, auctor hendrerit posuere magna hac laoreet orci parturient. Tempor sociis euismod quisque montes iaculis vitae nisi eu arcu sagittis velit cursus, vivamus est tincidunt tortor in volutpat augue eget magnis primis</string>
    <string name="return_text">Return</string>

    <!--    Job Logic View-->
    <string name="plus_year">years</string>
    <string name="potential_to_develop">Potential to develop</string>
    <string name="remote">Remote</string>
    <string name="anywhere">Anywhere</string>
    <string name="in">In</string>
    <string name="type">Type</string>
    <string name="benefits">Benefits</string>
    <string name="reason">Reason</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="requirements">Requirements</string>
    <string name="challenges">Challenges</string>
    <string name="career_path">Career path</string>
    <string name="organizations">Organizations</string>
    <string name="team_culture">Team culture</string>
    <string name="stock_compensations">Stock compensations</string>
    <string name="desirable">Desirable</string>
    <string name="team_structure">Team structure</string>
    <string name="additional">Additional</string>
    <string name="conversational">Conversational</string>
    <string name="fully_fluent">Fully fluent</string>
    <string name="reading">Reading</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>

    <!--    Bio View-->
    <string name="bio_subtitle_1">Summary</string>
    <string name="bio_subtitle_2">Strengths</string>
    <string name="bio_subtitle_3">Experience</string>
    <string name="bio_subtitle_4">Education</string>
    <string name="bio_subtitle_5">Languages</string>
    <string name="bio_subtitle_6">Personality</string>
    <string name="bio_subtitle_7">Professional Culture</string>
    <string name="bio_subtitle_8">Opportunities</string>
    <string name="bio_subtitle_9">Links</string>
    <string name="bio_subtitle_10">Location</string>
    <string name="bio_subtitle_11">Interests</string>
    <string name="bio_subtitle_12">Jobs</string>
    <string name="bio_subtitle_13">Projects</string>
    <string name="bio_subtitle_14">Publications</string>

    <!--    Bio Logic View-->
    <string name="category">Category</string>
    <string name="education">Education</string>
    <string name="projects">Projects</string>
    <string name="publications">Publications</string>
    <string name="awards">Awards</string>
    <string name="organization">Organization</string>
    <string name="name">Name</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="timezone">Timezone</string>
    <string name="timezone_offset">Timezone Offset</string>

    <string name="mentoring">Mentor</string>
    <string name="advising">Advisor</string>
    <string name="hiring">Hiring</string>
    <string name="freelance_gigs">Freelance</string>
    <string name="full_time_employment">Full Time</string>
    <string name="part_time_employment">Part Time</string>
    <string name="industries">Industries</string>
    <string name="internship">Internship</string>

    <string name="desirable_compensation_currency">Desired payment currency</string>
    <string name="desirable_compensation_amount">Desired payment amount</string>
    <string name="desirable_compensation_periodicity">Desired payment periodicity</string>

    <string name="no_open_to">Don\'t open to</string>
    <string name="open_to">Open to</string>

</resources>