<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="240dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_card"
        android:padding="1dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/default_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_card_image" />

        <TextView
            android:id="@+id/name"
            style="@style/text_black_shadow_white_10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Card_name"
            android:textColor="@color/White_Strong"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/highligth"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@color/Black"
            android:shadowRadius="25"
            android:text="@string/Card_highligth"
            android:textColor="@color/Yellow_Light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highligth">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5"/>

            <ImageView
                android:id="@+id/time_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/default_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_subtitle" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/White"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/Card_time"
                android:textColor="@color/Black_Soft"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/remote_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/default_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_subtitle" />

            <TextView
                android:id="@+id/remote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/White_Soft"
                android:shadowRadius="5"
                android:text="@string/Card_remote"
                android:textColor="@color/Black_Soft"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10">

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill1"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill2"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10">

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill3"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view7"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill4"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view8"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10">

                <View
                    android:id="@+id/view9"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill5"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view10"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill6"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view11"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10">

                <View
                    android:id="@+id/view12"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill7"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view13"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/skill8"
                    style="@style/text_black_shadow_white_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:maxHeight="32dp"
                    android:text="@string/Card_skill"
                    android:textSize="14sp" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>